create context variable title and content to home_page, about_page and contact_page, create and set src/template/about/view.html, src template/contact/view.html to use context variables

--- a/e_commerce/template/contact/view.html
+++ b/e_commerce/template/contact/view.html
@@ -12,9 +12,10 @@
     </head>
     <body>
         <div class='text-center'>
-            <h1>{{ title }}</h1> 
+            <h1>{{ title }}</h1> <!-- title e content vem do views.py (contact) -->
             <h2>{{ content }}</h2>
-            <h2>Funcionando de maneira correta!!!</h2>
+            <h2>Tá funcionando perfeitamente!!!</h2>
+            <!-- http://127.0.0.1:8000/contact/   endereço do contact-->
         </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
