--- a/e_commerce/template/about/view.html
+++ b/e_commerce/template/about/view.html
@@ -12,9 +12,10 @@
     </head>
     <body>
         <div class='text-center'>
-            <h1>{{ title }}</h1> 
+            <h1>{{ title }}</h1> <!-- title e content vem do views.py (about)-->
             <h2>{{ content }}</h2>
-            <h2>Funcionando de maneira correta!!!</h2>
+            <h2>E tá funcionando super bem!!!</h2>
+            <!-- http://127.0.0.1:8000/about/  endereço do about-->
         </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
