update src/e_commerce/e_commerce/template/contact/view.html and the comment about <div class='text-center' in home_page.html

--- a/e_commerce/template/home_page.html
+++ b/e_commerce/template/home_page.html
@@ -11,7 +11,7 @@
         <title>Código Fluente Ecommerce!</title>
     </head>
     <body>
-        <div class='text-center'>
+        <div class='text-center'> <!--um div class para centralizar os textos-->
             <h1>{{ title }}</h1> 
             <h2>{{ content }}</h2>
             <h2>Funcionando de maneira correta!!!</h2>
